clebercrventura: [Tarefas- aproveitamento da tela ajustes (registro sonho)]

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,6 +23,7 @@ grid-template-rows: minmax(100px, auto) minmax(100px, auto) minmax(100px, auto) 
 grid-auto-rows: auto;
 grid-auto-flow: column;
 grid-auto-columns: 350px;
+border: 1px red solid;
 }
 
 @media only screen and (max-height: 550px) {
