--- a/src/app/pages/register-dream/register-dream.component.html
+++ b/src/app/pages/register-dream/register-dream.component.html
@@ -72,6 +72,6 @@
     <span class="iconRightButton">
       <i class="fa fa-floppy-o" aria-hidden="true"></i>
     </span>
-    Registrar Sonho
+    Registrar
   </button>
 </div>
