clebercrventura: [Tarefas- aproveitamento da tela mobile - ajuste e alinhamento]

--- a/src/app/dialogs/dialog/dialog.component.css
+++ b/src/app/dialogs/dialog/dialog.component.css
@@ -8,6 +8,9 @@
 .dialog-ExibeSonho button{
     float:right;
 }
+.mat-dialog-content{
+overflow: hidden;
+}
 div{
     clear:both;
 }
@@ -18,9 +21,8 @@ div{
 .mat-report{
     color: #ffbf00;
 }
-.mat-itens{
-    color: #808080;
-}
+
+
 
 .div-sonho{
     margin-top: 20px;
@@ -62,7 +64,7 @@ h2 {
 hr{
     margin-top:10px;
     margin-bottom: -10px;
-    border-color: rgba(0, 128, 128, 0.137);
+    border-color: rgba(0, 128, 128, 0.308);
     
 }
 .overflow {
@@ -71,9 +73,8 @@ hr{
     position: relative;
 }
 div ::-webkit-scrollbar{
-    width: 12px;
-    
-    
+    width: 20px; 
+       
 }
 div ::-webkit-scrollbar-track{
     border-radius: 20px;
@@ -87,6 +88,11 @@ div ::-webkit-scrollbar-thumb{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+.dialog-itens button{
+   margin:5px 0 5px 0;
+   color: #808080;
+  
 }
 .span-itens{
     vertical-align: -webkit-baseline-middle;
