clebercrventura: [Tarefas- inclusão do total de passos]

--- a/src/app/pages/register-dream/register-dream.component.html
+++ b/src/app/pages/register-dream/register-dream.component.html
@@ -43,6 +43,7 @@
       </button>
         <!-- AO ADICIONAR INCLUIR O SONHO COMO CHECKBOX NA DIV QUE POSSUI O ID div-checkbox-trilha-->
         <mat-progress-bar mode="determinate" [value]="progressBarTrail()"></mat-progress-bar>
+        <div>{{passosRealizados()}}/{{arayTrilha.length}}</div>
     </div>
 
     <div class="overflow" cdkDropList (cdkDropListDropped)="drop($event)">
